# mx-remote

./: .gitignore  CLAUDE.md  LICENSE  README.md  hatch_build.py  pyproject.toml
mx_remote/: Interface.py  Uid.py  __init__.py  const.py  main.py
mx_remote/proto/: BayConfig.py  Constants.py  Data.py  Factory.py  FrameAmpDolbySettings.py  FrameAmpZoneSettings.py  FrameBase.py  FrameBayConfig.py  FrameBayConfigSecondary.py  FrameBayHide.py  FrameBayStatus.py  FrameConnectStatus.py  FrameDebug.py  FrameDiscover.py  FrameEDID.py  FrameEDIDProfile.py  FrameFactoryReset.py  FrameFilterStatus.py  FrameFirmwareVersion.py  FrameHeader.py  FrameHello.py  FrameLinks.py  FrameMeshOperation.py  FrameMirrorStatus.py  FrameMonitoringPulse.py  FrameNetworkStatus.py  FramePDUState.py  FramePowerChange.py  FrameRCAction.py  FrameRCIr.py  FrameRCKey.py  FrameRCSettings.py  FrameReboot.py  FrameRoutingChange.py  FrameSetInstaller.py  FrameSetName.py  FrameSetRoute.py  FrameSetupStatus.py  FrameSignalStatus.py  FrameSignalStatusNew.py  (+30 more)
mx_remote/remote/: Bay.py  ConnectionAsync.py  Device.py  Link.py  P8PDU.py  Remote.py  State.py  V2IP.py
python/: .gitignore  README.md  setup.py  test.py
python/custom_components/mx_remote/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  media_player.py  number.py  sensor.py  services.yaml
python/mx_remote/: ConnectionAsync.py  Remote.py  __init__.py  const.py
python/mx_remote/api/: BayConfig.py  __init__.py
python/mx_remote/proto/: BayConfig.py  Factory.py  FrameBase.py  FrameBayConfig.py  FrameBayConfigSecondary.py  (+19 more)
(+7 files in other folders)
