[build-system]
requires = ["hatchling", "mypy<2"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]

[project]
name = "mx_remote"
dynamic = ["version"]
dependencies = [
  "aiohttp>=3.10.5",
  "aiofiles>=24.1.0",
  "netifaces>=0.11.0",
]
requires-python = ">=3.11"
authors = [
  {name = "Lars Op den Kamp", email = "lars@opdenkamp-it.nl"},
]
maintainers = [
  {name = "Lars Op den Kamp", email = "lars@opdenkamp-it.nl"},
]
description = "Python 3 library for interfacing with MX Remote compatible devices"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["matrixos", "oneip", "ampos", "pulse-eight"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Topic :: System :: Networking :: Monitoring",
]

[tool.hatch.version]
source = "regex"
path = "mx_remote/const.py"
pattern = "VERSION = '(?P<version>[^']+)'"

[project.urls]
Homepage = "https://github.com/opdenkamp/mx-remote/"
Documentation = "https://github.com/opdenkamp/mx-remote/"
Repository = "https://github.com/opdenkamp/mx-remote.git"
"Bug Tracker" = "https://github.com/opdenkamp/mx-remote/issues"

[project.scripts]
mxr = "mx_remote.main:mxr_main"
